--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
